netlink15_derive/tests/ui/serializable/nla-type-missing-annotation-fails.stderr
error: proc-macro derive panicked
 --> tests/ui/serializable/nla-type-missing-annotation-fails.rs:4:28
  |
4 | #[derive(Debug, PartialEq, NetlinkAttributeSerializable)]
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Please annotate all enum variants with #[nla_type(..)]. Saw "Unknown" unannotated.
